# tilepad-mobile

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  THIRD_PARTY_LICENSES.md  cspell.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
scripts/: check-i18n.mjs  generate-licenses.mjs
src/: App.svelte  Pages.svelte  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  devices.rs  mod.rs  settings.rs
src-tauri/src/database/: helpers.rs  mod.rs
src-tauri/src/database/entity/: device.rs  mod.rs  settings.rs
src-tauri/src/database/migrations/: m202502251226_create_devices_table.rs  m202502251226_create_devices_table.sql  m202504281419_create_settings_table.sql  mod.rs  schema.rs
src-tauri/src/device/: actor.rs  mod.rs  protocol.rs  socket.rs  socket_actor.rs
src-tauri/src/events/: mod.rs  processing.rs
src-tauri/src/utils/: device.rs
src/lib/: socket.ts
src/lib/api/: app.ts  devices.ts  encryption.ts  fonts.ts  server.ts  settings.ts  socket.svelte.ts  types.ts
src/lib/api/types/: actions.ts  devices.ts  folders.ts  plugin.ts  profiles.ts  protocol.ts  server.ts  settings.ts  shared.ts  tiles.ts
src/lib/api/utils/: url.ts
src/lib/components/: ActionDrawer.svelte  AppToaster.svelte  Aside.svelte  Connect.svelte  CreatorSection.svelte  HTabs.svelte  PulseLoader.svelte  ServerProvider.svelte  SettingsLoader.svelte  SettingsProvider.svelte  SettingsSection.svelte  WebsocketProvider.svelte
src/lib/components/device/: AddDeviceForm.svelte  AddManualDeviceForm.svelte  AddScanDeviceForm.svelte  DeviceList.svelte  DeviceListItem.svelte
src/lib/components/dialog/: Dialog.svelte  DialogCloseButton.svelte
src/lib/components/display/: Display.svelte  DisplayFrame.svelte  DisplayPluginMessageListener.svelte  displayMessage.ts
src/lib/components/i18n/: I18nProvider.svelte  LanguageSelector.svelte
src/lib/components/input/: Button.svelte  LinkButton.svelte  NumberInput.svelte  TextInput.svelte  ToggleButton.svelte
src/lib/components/liceneses/: LicensesDialog.svelte
src/lib/components/loading/: LoadingSpinner.svelte
src/lib/components/markdown/: Markdown.svelte
src/lib/components/popover/: PopoverButton.svelte
src/lib/components/skeleton/: SkeletonList.svelte
src/lib/components/tiles/: EmptyTile.svelte  FilledTile.svelte  TileContainer.svelte  TileGrid.svelte  TileIcon.svelte  TileIndicator.svelte  TileLabel.svelte  TileLabelElm.svelte  TilesView.svelte
src/lib/contexts/: server.context.ts
src/lib/i18n/: i18n.svelte.ts
src/lib/i18n/locales/: cs.json  de.json  en.json  es.json  fr.json
src/lib/styles/: app.css  github-markdown.css  toaster.css
src/lib/utils/: eventEmitter.ts  fontLoader.ts  svelte.svelte.ts  url.ts
src/lib/views/: AuthenticatedView.svelte  AuthenticatingView.svelte  ConnectingView.svelte  ConnectionFailedView.svelte  ConnectionLostView.svelte  DeclinedView.svelte  InitialView.svelte  RequestingApproval.svelte  RevokedView.svelte  ServerTrustView.svelte
src/routes/: +layout.svelte  +page.svelte
