[package]
name = "tilepad-mobile"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tilepad_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.26.2"
uuid = { version = "1.14.0", features = ["v4"] }
anyhow = "1.0.96"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
thiserror = "2.0.11"
parking_lot = "0.12.3"
async-trait = "0.1.86"
chrono = { version = "0.4.40", features = ["serde"] }
tauri-plugin-os = "2"
tauri-plugin-keep-screen-on = "0.1.2"

[dependencies.sqlx]
version = "0.8.2"
features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "derive",
    "uuid",
    "chrono",
    "json",
]

[dependencies.sea-query]
version = "0.32.1"
features = [
    "derive",
    "thread-safe",
    "backend-sqlite",
    "with-chrono",
    "with-json",
    "with-uuid",
]

[dependencies.sea-query-binder]
version = "0.7.0"
features = [
    "sqlx-sqlite",
    "with-chrono",
    "with-json",
    "with-uuid",
    "runtime-tokio-rustls",
]


[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
