[package]
name = "tilepad-mobile"
version = "0.1.0"
description = "Tilepad mobile app"
authors = ["Jacobtread"]
edition = "2024"
repository = "https://github.com/TilePad/tilepad-desktop"
readme = "../README.md"
homepage = "https://tilepad.pages.dev/"
license = "MIT"
keywords = ["macropad"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tilepad_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

# Async runtime
tokio = { version = "1", features = ["fs", "macros"] }

# UUIDs
uuid = { version = "1", features = ["v4"] }

# Errors
anyhow = "1"

# Logging
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Tauri plugins
tauri-plugin-keep-screen-on = "0.1"
tauri-plugin-haptics = "2"

async-trait = "0.1"

# Used to get the friendly name of the users device
nick-name = "0.1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[dependencies.sqlx]
version = "0.8.2"
features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "derive",
    "uuid",
    "chrono",
    "json",
]

[dependencies.sea-query]
version = "0.32.1"
features = [
    "derive",
    "thread-safe",
    "backend-sqlite",
    "with-chrono",
    "with-json",
    "with-uuid",
]

[dependencies.sea-query-binder]
version = "0.7.0"
features = [
    "sqlx-sqlite",
    "with-chrono",
    "with-json",
    "with-uuid",
    "runtime-tokio-rustls",
]
